<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    tools:context="io.particle.android.sdk.devicesetup.ui.DiscoverDeviceActivity">

    <include layout="@layout/brand_image_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@null"
            tools:src="@drawable/device_image_small" />

        <TextView
            android:id="@+id/wifi_list_header"
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi_list_header_text" />

        <fragment
            android:id="@+id/wifi_list_fragment"
            android:name="io.particle.android.sdk.devicesetup.ui.WifiListFragment"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            tools:layout="@layout/row_wifi_scan_result" />

        <TextView
            android:id="@+id/open_wifi_settings"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/open_wifi_settings_text"
            android:textSize="@dimen/text_size_small"
            android:visibility="gone" />

        <Button
            android:id="@+id/action_wifi"
            style="@style/SparkButton"
            android:layout_marginBottom="8dp"
            android:text="@string/wifi_settings"
            android:visibility="gone" />

        <TextView
            android:id="@+id/msg_device_not_listed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/msg_device_not_listed"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="@dimen/text_size_nano" />

        <TextView
            android:id="@+id/action_troubleshooting"
            style="@style/LinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/troubleshooting"
            android:visibility="gone" />

        <TextView
            android:id="@+id/logged_in_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/you_are_logged_in_as"
            android:textColor="@color/normal_text_color"
            android:textSize="@dimen/text_size_micro" />

        <Button
            android:id="@+id/action_cancel"
            style="@style/SparkButton"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
